Closed Bug 217886 Opened 22 years ago Closed 22 years ago

frame structure gets lost in builds since 20030826

Categories

(Core :: Layout: Images, Video, and HTML Frames, defect)

x86
All
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: gorgonz, Assigned: mconnor)

References

()

Details

(Keywords: qawanted, regression)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5b) Gecko/20030829 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5b) Gecko/20030829 The hp http://www.mrt-gutesundneues.de/ is designed with 2 frames _menu and _main. If I click a link in the menu the corresponding html page will not be shown in the expected frame _main anymore but acting like _top. This means there are no frames anymore but this page (no _menu frame). Comparing with IE V5.5 will show the expected behaviour. Hints: - see it since 20030826 - Firebird V0.6.1 works correct I call it a major bug, because it changes the designed layout of web sites and should be fixed in V1.5 Reproducible: Always Steps to Reproduce: 1. 2. 3.
Indeed. Win2k/20030830.
Status: UNCONFIRMED → NEW
Component: Browser-General → Layout: HTML Frames
Ever confirmed: true
Adding regression kw and reassigning to Frames owner & qa.
Assignee: general → frame
Keywords: regression
QA Contact: general → madhur
What's the last nightly build in which this worked correctly? What's the first one in which it failed? There were no checkins on the 25th that should have affected this in any way. If people need builds, I temporarily have some Linux ones going back to Aug 13, 2003 at http://web.mit.edu/bzbarsky/mozbuilds/ Does this work if the frame names do not start with '_' (frame names starting with '_' are reserved in HTML, and the behavior of using them is undefined)?
Keywords: qawanted
Hi Boris, You got some good kind of instinct ;-) : Using the frame names without '_' solves the problem. Still I'm thinking about, if it is a good approach to change a behaviour, that worked from version V0.9 until the beginning of august 2003. Your question concerning the version is not that easy for me. Let's say it like this: build 20030802 definitely worked, I 'believe' that 20030822 also did the job. But maybe analysis is more easy anyway, since we know about '_' now ;-)
Bug also occurs in 2003-08-08-22 trunk Linux. Maybe a regression from bug 215041? (checked in 2003-08-04)
OS: Windows 2000 → All
regressed between linux trunk 2003080305 and 2003080505
the site in question uses _Main as the frame name, which works under IE, however _main behaves in the same way as content. Because the patch for bug 215041 uses name.EqualsIgnoreCase("_main") as the check, _Main gets handled the way _main does, which is not matching IE's behaviour. hyatt: I'm quite sure that having _main as a case sensitive check will achieve what we want here without breaking sites using _Main (whether that's correct behaviour or not, if we're just trying to support IE's behaviour we only need "_main"
hyatt doesn't read bugmail... r+sr=me on the change to a case-sensitive check if a comment is added at the same time explaining why it's done (the attributes involved are all case-insensitive, so what IE does is a gross HTML spec violation). Someone will need to actually check the patch in, though -- I have no CVS access here.
if someone attaches a patch here, I can check it in (when it gets approval or when the tree opens for 1.6a)
This patch makes it a case-sensitive check, thanks to biesi on IRC for the help
Comment on attachment 130852 [details] [diff] [review] patch to make _main a case-sensitive target r+sr=bzbarsky if you take out the stray space after "Equals(".
Attachment #130852 - Flags: superreview+
Attachment #130852 - Flags: review+
I'll get this whitespace thing down sooner or later, thanks bz
Attachment #130852 - Attachment is obsolete: true
Comment on attachment 130857 [details] [diff] [review] fixing whitespace per bz carrying over r+sr, requesting approval for checkin to 1.5.
Attachment #130857 - Flags: superreview+
Attachment #130857 - Flags: review+
Attachment #130857 - Flags: approval1.5?
Comment on attachment 130857 [details] [diff] [review] fixing whitespace per bz Please get this in for 1.5. Where is the followup bug for fixing the too-many places that need to know about these magic names? /be
Attachment #130857 - Flags: approval1.5? → approval1.5+
checked in
Assignee: frame → mpconnor
Depends on: 215041
Fixed on trunk. Brendan, I filed bug 218254 as a followup.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
mpconnor: thanks. /be
Product: Core → Core Graveyard
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: