Bug 217886 frame structure gets lost in builds since 20030826 patch by mpconnor@rogers.com r=bz sr=bz a=brendan