xpfe/appshell/src/nsChromeTreeOwner.cpp
@@ -120,7 +120,9 @@ NS_IMETHODIMP nsChromeTreeOwner::FindItemWithName(const PRUnichar* aName,
       return NS_OK;
    if(name.EqualsIgnoreCase("_blank"))
       return NS_OK;
-   if(name.EqualsIgnoreCase("_content") || name.EqualsIgnoreCase("_main"))
+   // _main is an IE target which should be case-insensitive but isn't
+   // see bug 217886 for details
+   if(name.EqualsIgnoreCase("_content") || name.Equals(NS_LITERAL_STRING("_main")))
       {
       fIs_Content = PR_TRUE;
       mXULWindow->GetPrimaryContentShell(aFoundItem);
